--- a/package.json
+++ b/package.json
@@ -2,17 +2,16 @@
   "name": "dark-office",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/app.js",
+  "main": "./lib/app.js",
   "scripts": {
-    "dev": "tsx watch app",
     "start": "node .",
-    "build": "tsc --watch",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "https-proxy-agent": "^7.0.4",
     "jalali-moment": "^3.3.11",
     "telegraf": "^4.16.3",
     "telegraf-session-local": "^2.1.1"
